@@ -1,3 +1,14 @@
+2000-08-02  Jeff Hobbs  <hobbs@scriptics.com>
+
+	* generic/tkTable.c (TableConfigCursor, TableCursorEvent)
+	(TableFlashEvent, TableEventProc):
+	* generic/tkTableEdit.c (TableDeleteChars, TableInsertChars):
+	* generic/tkTableCmds.c (Table_CurvalueCmd): removed INV_FORCE
+	from TableRefresh call.  This means more refreshes are delayed.
+
+	* generic/tkTable.c (BUILD_tkTable): corrected EXTERN def'n of
+	Init funcs.
+
 2000-08-01  Jeff Hobbs  <hobbs@scriptics.com>
 
 	* library/tkTable.tcl: rewritten to use ::tk::table namespace
